Swagger por terminar
