# server/api/controllers/reclamo/reclamoControllerBk.ts
@@ -6,34 +6,17 @@ import { ResponseCode } from '../../dtos/response-codes.enum';
 import { Usuario } from '../../model/usuario';
 import { EstadoReclamo } from '../../model/estadoReclamo';
 
-function canCreate(reclamo) {
-  if(reclamo.usuario.idSSO == "" ||
-  reclamo.usuario.nombre == "" ||
-  reclamo.usuario.email == "" ||
-  reclamo.usuario.telefono == "" ||
-  reclamo.usuario.direccion == "" ||
-  reclamo.usuario.rol == "" ||
-  reclamo.descripcion == "" ||
-  reclamo.nroOrden == "" ||
-  reclamo.fuente == "")
-  return false;
-
-  return true;
-}
-
 export class ReclamoController {
   /**
    * BuscarReclamo Funcionando
    */
   findOne(req: Request, res: Response): void {
     const id = parseInt(req.params.id);
-    console.table(req.param);
     ReclamoService.findOne(id)
       .then(r => {
         if (!r) {
           res.status(ResponseCode.NotFound).end();
         } else {
-          console.log(r.getUsuario());
           res.json(r);
         }
       })
@@ -43,18 +26,14 @@ export class ReclamoController {
   /**
    * AltaReclamo Funcionando
    */
-  save(req: Request, res: Response):void {
+  save(req: Request, res: Response): void {
+    //const sleep = (waitTimeInMs) => new Promise(resolve => setTimeout(resolve, waitTimeInMs));
     const reclamo = req.body;
-    console.table(req.body);
 
+    if (reclamo.email) {
       UsuarioService.findOne(reclamo.email)
-      .then(usuario => {
-        if (!usuario) {
-          res.status(ResponseCode.InternalServerError).json({
-            message: `El usuario no existe`
-          });
-        }
-        else{
+        .then((usuario: Usuario) => {
+          //Con este new Reclamo lo que se evita es que si se mandan más parametros en req, no se usen.
           let reclamoSave = new Reclamo(
             usuario,
             reclamo.descripcion,
@@ -65,59 +44,63 @@ export class ReclamoController {
           );
 
           ReclamoService.save(reclamoSave)
-          .then(x => res.json(x))
-          .catch(err => {
-            console.error(err);
-            return res.status(500).json({
-              message: `No se ha podido guardar el reclamo`
+            .then(x => res.json(x))
+            .catch(err => {
+              console.error(err);
+              return res.status(500).json({
+                message: `No se ha podido guardar el reclamo`
+              });
             });
+        })
+        .catch(err => {
+          console.error(err);
+          return res.status(500).json({
+            message: `No se encontró usuario con el correo ${reclamo.email}`
           });
-        }
-      })
-      .catch(err => {
-        return res.status(ResponseCode.InternalServerError).json({
-          message: `Un error inesperado a ocurrido. Por favor, reintentelo nuevamente`
-       });;
-      });
+        });
+    }
   }
-
 
   /**
    * ModificarReclamo Funcionando
    */
   update(req: Request, res: Response): void {
-    console.table(req.params);
-    console.table(req.body);
     const id = parseInt(req.params.id);
     const reclamo = req.body;
-    if(reclamo.descripcion == "" || reclamo.estado <=0 || reclamo.estado >5){
-      res.status(500).json({
-        message: `No se pudo atualizar el reclamo. Descripcion o estado incorrecto`
-      });
-    }
-    ReclamoService.findOne(id)
-      .then(r => {
-        if (!r) {
-          res.status(ResponseCode.NotFound).end();
-        } else {
 
-          r.setDescripcion(reclamo.descripcion);
-          r.getEstado().setId(reclamo.estado);
-          ReclamoService.update(id, r).then(r2 => {
-            if (!r2) return res.status(ResponseCode.NotFound).end();
-            return res.status(ResponseCode.Ok).end();
-          });
-        }
-      })
+    let reclamoSave = new Reclamo(
+      new Usuario(
+        reclamo.usuario.id,
+        0,
+        '',
+        '',
+        '',
+        '',
+        ''
+        /*reclamo.usuario.idSSO,
+                reclamo.usuario.nombre,
+                reclamo.usuario.email,
+                reclamo.usuario.telefono,
+                reclamo.usuario.direccion,
+                reclamo.usuario.rol*/
+      ),
+      reclamo.descripcion,
+      reclamo.nroOrden,
+      reclamo.fuente,
+      new Date(reclamo.fecha),
+      new EstadoReclamo(reclamo.estado.id, '')
+    );
+
+    ReclamoService.update(id, reclamo).then(r => {
+      if (!r) return res.status(ResponseCode.NotFound).end();
+      return res.status(ResponseCode.Ok).end();
+    });
   }
 
   /**
    * BajaReclamo Funcionando
    */
   remove(req: Request, res: Response): void {
-    console.table(req.params);
-    console.table(req.body);
-
     const id = parseInt(req.params.id);
     ReclamoService.remove(id)
       .then(r => {
