# server/api/model/estadoReclamo.ts
@@ -5,14 +5,42 @@ import { Reclamo } from "./reclamo";
 export class EstadoReclamo {
    
    @PrimaryGeneratedColumn()
-   @OneToMany(type => Reclamo, reclamo => reclamo.estado)
-   id: number;
+   @OneToMany(type => Reclamo, reclamo => reclamo.getEstado)
+   private id: number;
    
    @Column()
-   descripcion: string;
+   private descripcion: string;
 
    constructor($id:number,$descripcion: string){
     this.id = $id;  
     this.descripcion = $descripcion;
+   }
+
+   /**
+    * getId
+    */
+   public getId() {
+      return this.id;
+   }
+
+   /**
+    * setId
+    */
+   public setId(id:number) {
+      this.id = id;
+   }
+
+   /**
+    * getDescripcion
+    */
+   public getDescripcion() {
+      return this.id;
+   }
+
+   /**
+    * setDescripcion
+    */
+   public setDescripcion(descripcion:string) {
+      this.descripcion = descripcion;
    }
 }
